@@ -33,7 +33,7 @@ public class SecurityConfiguration {
                 .cors(c -> c.configurationSource(
                         request -> {
                             CorsConfiguration config = new CorsConfiguration();
-                            config.setAllowedOrigins(List.of("http://localhost:3000"));
+                            config.setAllowedOrigins(Collections.singletonList("*"));
                             config.setAllowedMethods(Collections.singletonList("*"));
                             config.setAllowCredentials(true);
                             config.setAllowedHeaders(Collections.singletonList("*"));
